instagram color properly added

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -135,8 +135,8 @@ body{
     opacity: 80.2%;
 }
 
-.redes-sociais .curriculo{
-    background-color: #1ba87bfb;
+.redes-sociais .instagram{
+    background-color: #ce3813fb;
     opacity: 80.2%;
     
 }
